# Shoot-Em-Up

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: game.hpp
src/: CMakeLists.txt  game.cpp
src/CommandObject/: CMakeLists.txt
src/CommandObject/Category/: CMakeLists.txt  Category.hpp
src/CommandObject/Command/: CMakeLists.txt  Command.cpp  Command.hpp
src/CommandObject/CommandQueue/: CMakeLists.txt  CommandQueue.cpp  CommandQueue.hpp
src/Core/: CMakeLists.txt
src/Core/ResourceHolder/: CMakeLists.txt  ResourceHolder.hpp  ResourceHolder.inl  TextureIDs.hpp
src/Core/ResourceHolder/FontHolder/: CMakeLists.txt  FontHolder.hpp  FontIDs.hpp
src/Core/ResourceHolder/ShaderHolder/: CMakeLists.txt  ShaderHolder.hpp
src/Core/ResourceHolder/TextureHolder/: CMakeLists.txt  GameTextures.hpp  TextureHolder.hpp  TextureIDs.hpp
src/Core/Utility/: CMakeLists.txt  Utility.cpp  Utility.hpp
src/Entities/: Aircraft.cpp  Aircraft.hpp  CMakeLists.txt
src/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  game.cpp  game.hpp
src/GameObject/: CMakeLists.txt
src/GameObject/Entities/: Aircraft.cpp  Aircraft.hpp  CMakeLists.txt
src/GameObject/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/GameObject/SceneNode/: CMakeLists.txt  SceneNode.cpp  SceneNode.hpp
src/GameObject/SpriteNode/: CMakeLists.txt  SpriteNode.cpp  SpriteNode.hpp
src/Main/: CMakeLists.txt
src/ResourceHolder/: CMakeLists.txt  ResourceHolder.hpp  ResourceHolder.inl  ShaderHolder.hpp  TextureHolder.hpp  TextureIDs.hpp
src/SceneNode/: CMakeLists.txt  SceneNode.cpp  SceneNode.hpp
src/SpriteNode/: CMakeLists.txt  SpriteNode.cpp  SpriteNode.hpp
src/System/: CMakeLists.txt
src/System/Application/: Application.cpp  Application.hpp  CMakeLists.txt
src/System/Game/: CMakeLists.txt  Game.cpp  Game.hpp
src/System/Main/: CMakeLists.txt  Main.cpp
src/System/Player/: CMakeLists.txt  Player.cpp  Player.hpp
src/System/State/: CMakeLists.txt  State.cpp  State.hpp  StateIdentifiers.hpp
src/System/StateStack/: CMakeLists.txt  StateStack.cpp  StateStack.hpp
src/System/States/: CMakeLists.txt
src/System/States/GameState/: CMakeLists.txt  GameState.cpp  GameState.hpp
src/System/States/LoadingState/: CMakeLists.txt  LoadingState.cpp  LoadingState.hpp
src/System/States/MenuState/: CMakeLists.txt  MenuState.cpp  MenuState.hpp
src/System/States/PauseState/: CMakeLists.txt  PauseState.cpp  PauseState.hpp
src/System/States/TitleState/: CMakeLists.txt  TitleState.cpp  TitleState.hpp
src/System/World/: CMakeLists.txt  World.cpp  World.hpp
src/Utility/: CMakeLists.txt  Utility.cpp  Utility.hpp
src/World/: CMakeLists.txt  World.cpp  World.hpp
